# SkullbonezCore

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  SKULLBONEZ_CORE.args.json  SKULLBONEZ_CORE.sln  SKULLBONEZ_CORE.vcproj  SKULLBONEZ_CORE.vcxproj  SKULLBONEZ_CORE.vcxproj.filters  build_out.txt  build_profile.txt  build_rel.txt  cdb_cmds.txt  cdb_err.txt  cdb_out.txt  cdb_out2.txt
.claude/: settings.local.json
.githooks/: README.md  check-braces.py  check-headers.py  fix-line-endings.py  run-clang-format.py  trim-whitespace.py
.github/: copilot-instructions.md
Copilot/: Bugs.md  DUAL_API_IMPLEMENTATION.md  SessionState.md  session.md
Copilot/Plans/: add-broadphase-collision-opus-progress.md  dxr-water-plan.md  ffp-to-shader-migration.md  improve-collision-detection-sonnet-plan.md  improve-collision-detection-sonnet-progress.md  improve-terrain-rolling-opus-plan.md  improve-terrain-rolling-opus-progress.md  new-water-system.md  plan-eliminatedynamicallocation-4.md  plan-modern-cpp.md  plan.md  progress-eliminatedynamicallocation-4.md  progress.md  scene_save_plan.md  test-suite-runner.md  water-reflection.md
Copilot/Reports/: PhysicsAudit.md  audit_dx11.md  audit_dx12.md  audit_opengl.md
Copilot/Session State/: session.md
Copilot/Skills/: collapse_params.py  loc_count.py
Debug/: SKULLBONEZ_CORE.exe.recipe  SKULLBONEZ_CORE.ilk  SKULLBONEZ_CORE.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/SKULLBONEZ_CORE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SKULLBONEZ_CORE.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: SKULLBONEZ_CORE.exe.recipe  SKULLBONEZ_CORE.vcxproj.FileListAbsolute.txt
Release/SKULLBONEZ_CORE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SKULLBONEZ_CORE.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Skills/build-skullbonez-core/: skill.md
Skills/capture-screenshot/: skill.md
Skills/debug-skullbonez-core/: skill.md
Skills/launch-skullbonez-core/: skill.md
Skills/render-test/: skill.md
Skills/skore-build-pass/: skill.md
Skills/skore-build-pipeline/: skill.md
Skills/skore-capture-screenshot/: capture-screenshot.ps1  skill.md
Skills/skore-debug/: skill.md
Skills/skore-launch/: skill.md
SkullbonezData/: engine.cfg  terrain.raw
SkullbonezSource/: SkullbonezBoundingSphere.cpp  SkullbonezBoundingSphere.h  SkullbonezCamera.cpp  SkullbonezCamera.h  SkullbonezCameraCollection.cpp  SkullbonezCameraCollection.h  SkullbonezCollisionResponse.cpp  SkullbonezCollisionResponse.h  SkullbonezCollisionShape.h  SkullbonezCommon.h  SkullbonezConfig.cpp  SkullbonezConfig.h  SkullbonezDoublePendulum.cpp  SkullbonezDoublePendulum.h  SkullbonezDynamicsObject.h  SkullbonezFramebuffer.cpp  SkullbonezFramebuffer.h  SkullbonezFramebufferDX.cpp  SkullbonezFramebufferDX.h  SkullbonezFramebufferDX11.cpp  SkullbonezFramebufferDX11.h  SkullbonezFramebufferDX12.cpp  SkullbonezFramebufferDX12.h  SkullbonezFramebufferGL.cpp  SkullbonezFramebufferGL.h  SkullbonezGameModel.cpp  SkullbonezGameModel.h  SkullbonezGameModelCollection.cpp  SkullbonezGameModelCollection.h  SkullbonezGeometricMath.cpp  SkullbonezGeometricMath.h  SkullbonezGeometricStructures.h  SkullbonezHelper.cpp  SkullbonezHelper.h  SkullbonezIFramebuffer.h  SkullbonezIMesh.h  SkullbonezIRenderBackend.cpp  SkullbonezIRenderBackend.h  SkullbonezIShader.h  SkullbonezInit.cpp  (+82 more)
plans/: add-broadphase-collision-opus-plan.md  add-ground-shadows-opus-plan.md  add-ground-shadows-opus-progress.md  ffp-to-shader-migration.md  improve-collision-detection-opus-plan.md  improve-collision-detection-opus-progress.md  plan-codecleanup-5.md  plan-renderingperformance-6.md  progress-codecleanup-5.md  progress-renderingperformance-6.md  progress.md  test-harness.md
(+173 files in other folders)
